--- a/css/style.css
+++ b/css/style.css
@@ -40,13 +40,215 @@ button {
     font-size: 1.8rem;
     color: #000000; }
 
+.backdrop {
+  z-index: 10000;
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+  .backdrop .form {
+    height: auto;
+    width: 40rem;
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 5rem 1rem 1rem 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    position: relative; }
+    .backdrop .form .close {
+      position: absolute;
+      height: 4rem;
+      width: 4rem;
+      border-radius: 50%;
+      background-color: rgba(42, 42, 42, 0.8);
+      top: 0.5rem;
+      right: 0.5rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      transition: filter 300ms; }
+      .backdrop .form .close span {
+        color: #ccc; }
+      .backdrop .form .close:hover {
+        filter: brightness(1.2); }
+    .backdrop .form .firstname {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem; }
+      .backdrop .form .firstname label {
+        margin-left: 1rem;
+        font-size: 1.3rem;
+        font-weight: 500; }
+      .backdrop .form .firstname input[type="text"] {
+        outline-color: blue;
+        height: 4rem;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        padding: 0 1rem; }
+        .backdrop .form .firstname input[type="text"]::placeholder {
+          font-size: 1.5rem; }
+      .backdrop .form .firstname input[type="number"] {
+        outline-color: blue;
+        height: 4rem;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        padding: 0 1rem; }
+        .backdrop .form .firstname input[type="number"]::placeholder {
+          font-size: 1.5rem; }
+      .backdrop .form .firstname textarea {
+        outline-color: #84848a;
+        border: 1px solid #ccc;
+        border-radius: 5px; }
+      .backdrop .form .firstname select {
+        display: block;
+        height: 4rem;
+        padding: 0 1rem;
+        border-radius: 5px;
+        outline: none; }
+    .backdrop .form button {
+      border: 0;
+      padding: 0;
+      height: 4rem;
+      background-color: aqua;
+      border-radius: 5px;
+      color: #000000;
+      font-weight: bold; }
+
+#display-none {
+  display: none; }
+
+.contact {
+  height: auto;
+  width: 80%;
+  border-radius: 5px;
+  gap: 2rem;
+  padding: 2rem; }
+  .contact__text {
+    height: 10rem;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+    margin-bottom: 5rem; }
+    .contact__text h1 {
+      font-weight: 500;
+      font-size: 3rem; }
+    .contact__text p {
+      font-size: 1.7rem; }
+  .contact__form {
+    height: auto;
+    display: flex;
+    gap: 1rem; }
+    .contact__form--form {
+      width: 70%;
+      height: auto;
+      display: flex;
+      flex-direction: column;
+      gap: 3rem;
+      padding: 1rem; }
+      .contact__form--form .name-field {
+        display: flex;
+        gap: 2rem; }
+        .contact__form--form .name-field .field {
+          display: flex;
+          flex-direction: column;
+          gap: 1rem; }
+          .contact__form--form .name-field .field label {
+            font-size: 1.55rem; }
+          .contact__form--form .name-field .field input[type="text"] {
+            height: 4.5rem;
+            width: 50rem;
+            padding: 0 2rem;
+            outline: none;
+            border: none;
+            border: 1px solid #ccc;
+            border-radius: 5px; }
+          .contact__form--form .name-field .field input[type="email"] {
+            height: 4.5rem;
+            width: 50rem;
+            padding: 0 2rem;
+            outline: none;
+            border: none;
+            border: 1px solid #ccc;
+            border-radius: 5px; }
+          .contact__form--form .name-field .field input[type="number"] {
+            height: 4.5rem;
+            width: 50rem;
+            padding: 0 2rem;
+            outline: none;
+            border: none;
+            border: 1px solid #ccc;
+            border-radius: 5px; }
+      .contact__form--form .text-field {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        gap: 1rem; }
+        .contact__form--form .text-field label {
+          font-size: 1.55rem; }
+        .contact__form--form .text-field textarea {
+          border: none;
+          border: 1px solid #ccc;
+          border-radius: 5px;
+          resize: none;
+          overflow: auto;
+          color: #a09b9b;
+          padding: 1rem;
+          outline-color: #0078f2; }
+        .contact__form--form .text-field p {
+          font-weight: 400;
+          line-height: 1.4;
+          font-size: 1.5rem;
+          color: #a09b9b; }
+        .contact__form--form .text-field span {
+          color: #0078f2; }
+    .contact__form--location {
+      padding: 1rem;
+      width: 30%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 5rem; }
+      .contact__form--location .location {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 2rem; }
+        .contact__form--location .location span {
+          font-size: 3rem; }
+        .contact__form--location .location h2 {
+          font-size: 2rem; }
+        .contact__form--location .location p {
+          line-height: 1.4;
+          text-align: center;
+          font-size: 1.7rem;
+          color: #7e7b7b; }
+    .contact__form button {
+      background-color: #1d4ed8;
+      width: 15rem;
+      border: none;
+      padding: 1.75rem;
+      cursor: pointer;
+      border-radius: 10px;
+      color: #ccc; }
+
 .container {
-  height: calc(100vh - 6rem);
-  height: 150rem;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1rem; }
+  gap: 1rem;
+  overflow-x: scroll; }
+  .container::-webkit-scrollbar {
+    width: 0; }
 
 .main {
   margin-top: 1rem;
@@ -83,9 +285,12 @@ button {
     gap: 0.25rem; }
     .main__sub .schedule {
       width: 100%;
-      height: calc(70rem / 2);
+      max-height: 70rem;
+      overflow: auto;
       border-radius: 10px;
       padding: 1.5rem 0; }
+      .main__sub .schedule header {
+        margin: 1rem 0; }
       .main__sub .schedule__text {
         height: 4rem;
         display: flex;
@@ -95,56 +300,6 @@ button {
         .main__sub .schedule__text h4 {
           font-size: 1.5rem;
           font-weight: 500; }
-    .main__sub .form {
-      height: calc(70rem / 2);
-      width: 100%;
-      background-color: #fff;
-      padding: 1rem;
-      border: 1px solid rgba(0, 0, 0, 0.5);
-      border-radius: 10px; }
-      .main__sub .form header {
-        margin-bottom: 5rem; }
-      .main__sub .form input[type="text"] {
-        margin-bottom: 1rem;
-        border: none;
-        height: 4rem;
-        border-radius: 5px;
-        width: 100%;
-        border-bottom: 1px solid #ccc;
-        outline: none;
-        padding: 0 2rem; }
-        .main__sub .form input[type="text"]::placeholder {
-          color: rgba(42, 42, 42, 0.5);
-          font-size: 1.5rem;
-          font-weight: 400; }
-      .main__sub .form input[type="number"] {
-        margin-bottom: 1rem;
-        border: none;
-        height: 4rem;
-        border-radius: 5px;
-        width: 100%;
-        border-bottom: 1px solid #ccc;
-        outline: none;
-        padding: 0 2rem; }
-        .main__sub .form input[type="number"]::placeholder {
-          color: rgba(42, 42, 42, 0.5);
-          font-size: 1.5rem;
-          font-weight: 400; }
-      .main__sub .form input[type="checkbox"] {
-        display: inline-block; }
-      .main__sub .form .name {
-        font-size: 1.5rem;
-        font-weight: 400;
-        margin-bottom: 1rem; }
-      .main__sub .form button {
-        bottom: unset;
-        height: 4rem;
-        border: none;
-        border-radius: 5px;
-        margin-top: 6rem;
-        width: 100%;
-        background-color: #0078f2;
-        cursor: pointer; }
 
 .event {
   height: auto;
@@ -154,40 +309,42 @@ button {
     width: 100%;
     border-radius: 5px;
     margin-bottom: 1rem;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(60rem, 1fr));
     gap: 1rem; }
     .event__content--content {
       flex: 1;
-      width: 81rem;
-      height: 25rem;
+      height: auto;
       border-radius: 5px;
-      background-color: aquamarine;
+      border: 1px solid #ccc;
       display: flex;
       gap: 1rem; }
       .event__content--content .img-content {
         width: 30rem;
         height: 25rem;
         background-color: pink;
-        border-top-left-radius: 5px;
-        border-bottom-left-radius: 5px; }
+        border-radius: 5px; }
+        .event__content--content .img-content img {
+          height: 100%;
+          width: 100%;
+          border-radius: 5px;
+          object-fit: cover; }
       .event__content--content .text-content {
         flex: 1;
-        height: 25rem;
         border-top-right-radius: 5px;
         border-bottom-right-radius: 5px;
         padding: 1rem 1rem;
         display: flex;
         flex-direction: column;
-        gap: 2rem; }
+        gap: 1rem; }
         .event__content--content .text-content h1 {
           font-size: 2rem; }
         .event__content--content .text-content p {
-          margin-top: 2rem;
+          white-space: normal;
           font-size: 1.5rem;
           font-weight: 400;
           line-height: 1.5; }
         .event__content--content .text-content span {
-          margin-top: 2rem;
           font-size: 1.2rem;
           flex: 1;
           display: flex;
@@ -233,7 +390,7 @@ button {
             bottom: 0;
             background-color: #0078f2; }
           .navigation__menu--menu ul li a {
-            font-size: 1.3rem;
+            font-size: 1.2rem;
             font-weight: 500;
             color: #404041; }
     .navigation__menu--price {
@@ -258,13 +415,34 @@ button {
   gap: 0.5rem; }
   .scroll-item {
     height: auto;
-    background-color: green;
+    border: 2px solid #ccc;
     border-radius: 10px;
     display: flex;
     padding: 0.5rem;
-    cursor: pointer; }
+    cursor: pointer;
+    gap: 1rem; }
     .scroll-item .item {
       width: 8rem;
       height: 8.8rem;
       background-color: #ccc;
       border-radius: 5px; }
+      .scroll-item .item img {
+        width: 100%;
+        height: 100%;
+        border-radius: inherit;
+        object-fit: cover; }
+    .scroll-item .text {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem; }
+      .scroll-item .text h1 {
+        font-weight: 500;
+        font-size: 1.5rem; }
+      .scroll-item .text p {
+        font-weight: 400;
+        line-height: 1.4; }
+      .scroll-item .text span {
+        flex: 1;
+        display: flex;
+        justify-content: flex-end; }
