--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -19,6 +19,10 @@ body {
   line-height: 1;
   overflow-y: scroll;
   overflow-x: hidden;
+
+  &::-webkit-scrollbar {
+    // width: 0;
+  }
 }
 
 li,
@@ -49,4 +53,126 @@ button {
     font-size: 1.8rem;
     color: #000000;
   }
+}
+
+.backdrop {
+  z-index: 10000;
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  & .form {
+    height: auto;
+    width: 40rem;
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 5rem 1rem 1rem 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    position: relative;
+
+    & .close {
+      position: absolute;
+      height: 4rem;
+      width: 4rem;
+      border-radius: 50%;
+      background-color: rgba(42, 42, 42, 0.8);
+      top: 0.5rem;
+      right: 0.5rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      transition: filter 300ms;
+
+      & span {
+        color: #ccc;
+      }
+
+      &:hover {
+        filter: brightness(1.2);
+      }
+    }
+
+    & .firstname {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+
+      & label {
+        margin-left: 1rem;
+        font-size: 1.3rem;
+        font-weight: 500;
+      }
+      & input[type="text"] {
+        // height: 4rem;
+        // border-radius: 1px solid #ccc;
+        // // border-radius: 1px;
+        // outline: none;
+        outline-color: blue;
+        // all: unset;
+        height: 4rem;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        padding: 0 1rem;
+
+        &::placeholder {
+          font-size: 1.5rem;
+        }
+      }
+
+      & input[type="number"] {
+        // height: 4rem;
+        // border-radius: 1px solid #ccc;
+        // // border-radius: 1px;
+        // outline: none;
+        outline-color: blue;
+        // all: unset;
+        height: 4rem;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        padding: 0 1rem;
+
+        &::placeholder {
+          font-size: 1.5rem;
+        }
+      }
+
+      & textarea {
+        outline-color: rgb(132, 132, 138);
+        border: 1px solid #ccc;
+        border-radius: 5px;
+      }
+
+      & select {
+        display: block;
+        height: 4rem;
+        padding: 0 1rem;
+        border-radius: 5px;
+        outline: none;
+      }
+    }
+
+    & button {
+      border: 0;
+      padding: 0;
+      height: 4rem;
+      background-color: aqua;
+      border-radius: 5px;
+      color: #000000;
+      font-weight: bold;
+    }
+  }
+}
+
+#display-none {
+  display: none;
 }
