--- a/sass/_container.scss
+++ b/sass/_container.scss
@@ -1,10 +1,14 @@
 .container {
-  height: calc(100vh - 6rem);
-  height: 150rem;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 1rem;
+  overflow-x: scroll;
+
+  &::-webkit-scrollbar {
+    width: 0;
+  }
 }
 
 .main {
@@ -56,10 +60,15 @@
 
     & .schedule {
       width: 100%;
-      height: calc(70rem / 2);
+      max-height: 70rem;
+      overflow: auto;
       // background-color: #2a2a2a;
       border-radius: 10px;
       padding: 1.5rem 0;
+
+      & header {
+        margin: 1rem 0;
+      }
 
       &__text {
         height: 4rem;
@@ -72,72 +81,6 @@
           font-size: 1.5rem;
           font-weight: 500;
         }
-      }
-    }
-
-    & .form {
-      height: calc(70rem / 2);
-      width: 100%;
-      background-color: #fff;
-      padding: 1rem;
-      border: 1px solid rgba(0, 0, 0, 0.5);
-      border-radius: 10px;
-
-      & header {
-        margin-bottom: 5rem;
-      }
-
-      & input[type="text"] {
-        margin-bottom: 1rem;
-        border: none;
-        height: 4rem;
-        border-radius: 5px;
-        width: 100%;
-        border-bottom: 1px solid #ccc;
-        outline: none;
-        padding: 0 2rem;
-
-        &::placeholder {
-          color: rgba(42, 42, 42, 0.5);
-          font-size: 1.5rem;
-          font-weight: 400;
-        }
-      }
-      & input[type="number"] {
-        margin-bottom: 1rem;
-        border: none;
-        height: 4rem;
-        border-radius: 5px;
-        width: 100%;
-        border-bottom: 1px solid #ccc;
-        outline: none;
-        padding: 0 2rem;
-
-        &::placeholder {
-          color: rgba(42, 42, 42, 0.5);
-          font-size: 1.5rem;
-          font-weight: 400;
-        }
-      }
-      & input[type="checkbox"] {
-        display: inline-block;
-      }
-
-      & .name {
-        font-size: 1.5rem;
-        font-weight: 400;
-        margin-bottom: 1rem;
-      }
-
-      & button {
-        bottom: unset;
-        height: 4rem;
-        border: none;
-        border-radius: 5px;
-        margin-top: 6rem;
-        width: 100%;
-        background-color: #0078f2;
-        cursor: pointer;
       }
     }
   }
