--- a/sass/_event.scss
+++ b/sass/_event.scss
@@ -8,16 +8,19 @@
     border-radius: 5px;
     margin-bottom: 1rem;
 
-    // background-color: aqua;
-    display: flex;
+    // // background-color: aqua;
+    // display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(60rem, 1fr));
     gap: 1rem;
 
     &--content {
       flex: 1;
-      width: 81rem;
-      height: 25rem;
+      // width: 81rem;
+      height: auto;
       border-radius: 5px;
-      background-color: aquamarine;
+      // background-color: aquamarine;
+      border: 1px solid #ccc;
       display: flex;
       gap: 1rem;
 
@@ -25,34 +28,37 @@
         width: 30rem;
         height: 25rem;
         background-color: pink;
-        border-top-left-radius: 5px;
-        border-bottom-left-radius: 5px;
+        border-radius: 5px;
+
+        & img {
+          height: 100%;
+          width: 100%;
+          border-radius: 5px;
+          object-fit: cover;
+        }
       }
 
       & .text-content {
         flex: 1;
-        height: 25rem;
-        // background-color: cadetblue;
+        // height: 25rem;
         border-top-right-radius: 5px;
         border-bottom-right-radius: 5px;
         padding: 1rem 1rem;
-
         display: flex;
         flex-direction: column;
-        gap: 2rem;
+        gap: 1rem;
 
         & h1 {
           font-size: 2rem;
         }
         & p {
-          margin-top: 2rem;
+          white-space: normal;
           font-size: 1.5rem;
           font-weight: 400;
           line-height: 1.5;
         }
 
         & span {
-          margin-top: 2rem;
           font-size: 1.2rem;
           flex: 1;
           display: flex;
