--- a/sass/_payment.scss
+++ b/sass/_payment.scss
@@ -7,17 +7,48 @@
 
   &-item {
     height: auto;
-    background-color: green;
+    // background-color: #6d5d6e;
+    border: 2px solid #ccc;
     border-radius: 10px;
     display: flex;
     padding: 0.5rem;
     cursor: pointer;
+    gap: 1rem;
 
     & .item {
       width: 8rem;
       height: 8.8rem;
       background-color: #ccc;
       border-radius: 5px;
+
+      & img {
+        width: 100%;
+        height: 100%;
+        border-radius: inherit;
+        object-fit: cover;
+      }
+    }
+    & .text {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+      & h1 {
+        font-weight: 500;
+        font-size: 1.5rem;
+      }
+
+      & p {
+        font-weight: 400;
+        line-height: 1.4;
+      }
+
+      & span {
+        // margin-top: 0.5rem;
+        flex: 1;
+        display: flex;
+        justify-content: flex-end;
+      }
     }
   }
 }
