adopting phone responsive

--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,9 @@ button {
   border-radius: 5px;
   gap: 2rem;
   padding: 2rem; }
+  @media (max-width: 31.25em) {
+    .contact {
+      width: 100%; } }
   .contact__text {
     height: 10rem;
     display: flex;
@@ -138,6 +141,9 @@ button {
     justify-content: center;
     gap: 1rem;
     margin-bottom: 5rem; }
+    @media (max-width: 31.25em) {
+      .contact__text {
+        text-align: center; } }
     .contact__text h1 {
       font-weight: 500;
       font-size: 3rem; }
@@ -147,6 +153,9 @@ button {
     height: auto;
     display: flex;
     gap: 1rem; }
+    @media (max-width: 31.25em) {
+      .contact__form {
+        flex-direction: column; } }
     .contact__form--form {
       width: 70%;
       height: auto;
@@ -154,9 +163,15 @@ button {
       flex-direction: column;
       gap: 3rem;
       padding: 1rem; }
+      @media (max-width: 31.25em) {
+        .contact__form--form {
+          width: 100%; } }
       .contact__form--form .name-field {
         display: flex;
         gap: 2rem; }
+        @media (max-width: 31.25em) {
+          .contact__form--form .name-field {
+            flex-direction: column; } }
         .contact__form--form .name-field .field {
           display: flex;
           flex-direction: column;
@@ -171,6 +186,9 @@ button {
             border: none;
             border: 1px solid #ccc;
             border-radius: 5px; }
+            @media (max-width: 31.25em) {
+              .contact__form--form .name-field .field input[type="text"] {
+                width: 100%; } }
           .contact__form--form .name-field .field input[type="email"] {
             height: 4.5rem;
             width: 50rem;
@@ -179,6 +197,9 @@ button {
             border: none;
             border: 1px solid #ccc;
             border-radius: 5px; }
+            @media (max-width: 31.25em) {
+              .contact__form--form .name-field .field input[type="email"] {
+                width: 100%; } }
           .contact__form--form .name-field .field input[type="number"] {
             height: 4.5rem;
             width: 50rem;
@@ -187,6 +208,9 @@ button {
             border: none;
             border: 1px solid #ccc;
             border-radius: 5px; }
+            @media (max-width: 31.25em) {
+              .contact__form--form .name-field .field input[type="number"] {
+                width: 100%; } }
       .contact__form--form .text-field {
         display: flex;
         justify-content: center;
@@ -217,6 +241,9 @@ button {
       flex-direction: column;
       align-items: center;
       gap: 5rem; }
+      @media (max-width: 31.25em) {
+        .contact__form--location {
+          width: 100%; } }
       .contact__form--location .location {
         display: flex;
         flex-direction: column;
@@ -253,9 +280,13 @@ button {
 .main {
   margin-top: 1rem;
   width: 80%;
-  height: 70rem;
+  height: auto;
   display: flex;
   gap: 1rem; }
+  @media (max-width: 31.25em) {
+    .main {
+      width: 100%;
+      flex-direction: column; } }
   .main__menu {
     position: relative;
     height: 70rem;
@@ -283,6 +314,9 @@ button {
     flex-direction: column;
     align-items: center;
     gap: 0.25rem; }
+    @media (max-width: 31.25em) {
+      .main__sub {
+        width: 100%; } }
     .main__sub .schedule {
       width: 100%;
       max-height: 70rem;
@@ -291,6 +325,9 @@ button {
       padding: 1.5rem 0; }
       .main__sub .schedule header {
         margin: 1rem 0; }
+        @media (max-width: 31.25em) {
+          .main__sub .schedule header {
+            text-align: center; } }
       .main__sub .schedule__text {
         height: 4rem;
         display: flex;
@@ -304,6 +341,9 @@ button {
 .event {
   height: auto;
   width: 80%; }
+  @media (max-width: 31.25em) {
+    .event {
+      width: 100%; } }
   .event__content {
     height: auto;
     width: 100%;
@@ -312,6 +352,9 @@ button {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(60rem, 1fr));
     gap: 1rem; }
+    @media (max-width: 31.25em) {
+      .event__content {
+        grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr)); } }
     .event__content--content {
       flex: 1;
       height: auto;
@@ -319,11 +362,19 @@ button {
       border: 1px solid #ccc;
       display: flex;
       gap: 1rem; }
+      @media (max-width: 31.25em) {
+        .event__content--content {
+          flex-direction: column;
+          align-items: center; } }
       .event__content--content .img-content {
         width: 30rem;
         height: 25rem;
         background-color: pink;
         border-radius: 5px; }
+        @media (max-width: 31.25em) {
+          .event__content--content .img-content {
+            width: 100%;
+            height: 100%; } }
         .event__content--content .img-content img {
           height: 100%;
           width: 100%;
@@ -350,6 +401,9 @@ button {
           display: flex;
           justify-content: flex-end;
           font-weight: 400; }
+          @media (max-width: 31.25em) {
+            .event__content--content .text-content span {
+              justify-content: center; } }
 
 .navigation {
   position: relative;
@@ -411,8 +465,12 @@ button {
   width: 80%;
   height: auto;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
   gap: 0.5rem; }
+  @media (max-width: 31.25em) {
+    .scroll {
+      grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+      width: 100%; } }
   .scroll-item {
     height: auto;
     border: 2px solid #ccc;
