--- a/sass/_payment.scss
+++ b/sass/_payment.scss
@@ -2,8 +2,13 @@
   width: 80%;
   height: auto;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
   gap: 0.5rem;
+
+  @include repond-phone {
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    width: 100%;
+  }
 
   &-item {
     height: auto;
