--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,5 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap");
 
+$bp-smallest: 31.25em; // 500px
+
+@mixin repond-phone {
+  @media (max-width: $bp-smallest) {
+    @content;
+  }
+}
+
 *,
 *::before,
 *::after {
